# Survive

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  dir_4747c6566e7a4862f10b9c51236081c0.html  dir_49e0422abf35750ef1405d5bea33cefc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7ad25bca70c4d3d9103f75d82f41ef94.html  dir_7e83d1792d529f4aa7126ac7e0b3b699.html  dir_9488ebe6b902419cd274425a25fd0a95.html  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_da5c6b39c0a2f54e57df6799511cd3ab.html  dir_da744136671222f1d32141508a46f042.html  dir_f3911b9629b0e27ea480d06d47573cbf.html  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_j.html  functions_func_l.html  functions_func_m.html  (+61 more)
.github/workflows/: build-release.yml  documentation.yml  notifications.yml  release.yml  test.yml
CMake/: FindLibCheck.cmake
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: CodeCoverage.cmake  FindLibCheck.cmake
d0/d14/: structAnimalInfo-members.html
d0/d1c/: classLevelInfoWidget-members.html  structDayEntry.html  structDayEntry.js
d0/d20/: tutorialwidget_8h.html  tutorialwidget_8h.js  tutorialwidget_8h_source.html
d0/d25/: menu_8cpp.html
d0/d28/: structEventResult.html  structEventResult.js
d0/d4a/: structPlantInfo.html  structPlantInfo.js
d0/d63/: classDraggableWidget-members.html
d0/d78/: mainmenu_8cpp.html
d0/d88/: sleepwidget_8h.html  sleepwidget_8h_source.html
d0/da1/: gameover_8h.html  gameover_8h_source.html
d0/da4/: classNotebookWidget-members.html
d0/dbc/: classScalableLabel-members.html
d0/dc2/: classJournalDay-members.html
d0/dd5/: day_8h.html  day_8h_source.html
d1/d16/: classSleepWidget-members.html
d1/d22/: svgpushbutton_8cpp.html
d1/d3d/: newgamemenu_8cpp.html
d1/d55/: engine_8h.html  engine_8h.js  engine_8h_source.html
d1/d72/: classGameOver-members.html
d1/d7c/: structActionEntry.html  structActionEntry.js
d1/d83/: action_8cpp.html
d1/da0/: core_2game_8cpp.html
d1/db6/: classEngine.html  classEngine.js
d1/dc4/: animal_8h.html  animal_8h_source.html
d1/dd4/: Engine_8h.html  Engine_8h_source.html
d2/d14/: classMainMenu-members.html
d2/d1e/: classEngine-members.html
d2/d31/: structEventInfo.html  structEventInfo.js
d2/d57/: level_8cpp.html  level_8cpp.js
d2/d58/: explore_8h.html  explore_8h_source.html
d2/d5b/: classSeason-members.html
d2/d61/: structLevelInfo-members.html
d2/d76/: effect_8h.html  effect_8h_source.html
d2/d81/: pausemenu_8cpp.html
d2/d8b/: classLevel-members.html
d2/d9d/: classLevel.html  classLevel.js
d2/da3/: draggablewidget_8h.html  draggablewidget_8h_source.html
d2/dad/: classResultWidget.html  classResultWidget.js
d2/db1/: animal_8cpp.html  animal_8cpp.js
d2/dce/: survivegame_8h.html  (+1 more)
d2/dd5/: game_8h.html  (+1 more)
datasets/: effects.json  keybinds.json  mtaspiring2020.json  mtaspiring2020climate.json  mtaspiringanimals.json
doc/: doxy.config.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  (+79 more)
src/: CMakeLists.txt  Data.h  Survive.cpp  Survive.rc  SurviveGame.cpp  SurviveGame.h  main.cpp  survive.rc  survivegame.cpp  survivegame.h
src/Core/: Action.cpp  Action.h  Animal.cpp  Animal.h  Bar.cpp  Bar.h  CMakeLists.txt  Day.cpp  Engine.cpp  Engine.h  Event.cpp  Game.cpp  Game.h  Level.cpp  Level.h
src/UI/: MainMenu.cpp  MainMenu.h
src/UI/Widgets/: ScalableWidget.cpp
src/UI/Widgets/MainMenu/: SettingsMenu.cpp  SettingsMenu.h
src/config/: files.cpp  files.h  settings.h
src/core/: Action.h  Animal.cpp  Bar.cpp  Bar.h  CMakeLists.txt  Day.h  Game.cpp  Plant.cpp  action.cpp  action.h  animal.cpp  animal.h  bar.cpp  bar.h  climate.cpp  climate.h  day.cpp  day.h  effect.h  engine.cpp  engine.h  event.cpp  event.h  explore.cpp  explore.h  game.cpp  game.h  journal.cpp  journal.h  level.cpp  level.h  plant.cpp  plant.h  season.cpp  season.h
src/ui/: game.cpp  game.h  mainmenu.cpp  mainmenu.h
src/ui/widgets/: draggablewidget.cpp  draggablewidget.h  scalablelabel.cpp  scalablelabel.h  scalablewidget.cpp  scalablewidget.h  svgpushbutton.cpp  svgpushbutton.h
src/ui/widgets/game/: gameover.cpp  gameover.h  notebookwidget.cpp  notebookwidget.h  pausemenu.cpp  pausemenu.h  resultwidget.cpp  resultwidget.h  tutorialwidget.cpp  tutorialwidget.h
src/ui/widgets/game/notebook/: actionmenu.cpp  actionmenu.h  historywidget.cpp  historywidget.h  notebookwidget.cpp  notebookwidget.h  resultwidget.cpp  resultwidget.h  sleepwidget.cpp  sleepwidget.h
src/ui/widgets/game/notebook/history/: journalday.cpp  journalday.h
src/ui/widgets/mainmenu/: loadgamemenu.cpp  loadgamemenu.h  menu.cpp  menu.h  newgamemenu.cpp  newgamemenu.h  settingsmenu.cpp  settingsmenu.h
src/util/: resolution.cpp  resolution.h
tests/: CMakeLists.txt  gen_coverage.sh.in
tests/config/: files-test.cpp
tests/core/: action-test.cpp  animal-test.cpp  bar-test.cpp  day-test.cpp  engine-test.cpp  event-test.cpp  explore-test.cpp  game-test.cpp  journal-test.cpp  level-test.cpp  plant-test.cpp  season-test.cpp
tests/data/levels/mtaspiring/: action.json  actions.json  animals.json  climate.json  disaster_ev.json  events.json  explore.json  explore_event.json  level.json  plants.json  season.json
tests/util/: resolution-test.cpp
(+246 files in other folders)
